# car-logo-helper

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: android-ci.yml  java-ci.yml  python-ci.yml
android/: build.gradle  settings.gradle
android/automotive-logo-library-android/: build.gradle  consumer-rules.pro
android/automotive-logo-library-android/src/main/: AndroidManifest.xml
android/automotive-logo-library-android/src/main/java/com/automotivelogolibrary/: AutomotiveLogoLibraryAndroid.java
android/carlogohelper-android/: build.gradle  consumer-rules.pro
android/carlogohelper-android/src/main/: AndroidManifest.xml
android/carlogohelper-android/src/main/java/com/carlogohelper/: CarLogoHelperAndroid.java
docs/: API.md
java/com/automotivelogolibrary/: AutomotiveLogoLibrary.java
java/com/carlogohelper/: CarLogoHelper.java
python/: pyproject.toml  setup.py
python/carlogohelper/: __init__.py
